[gd_scene load_steps=12 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Piece.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/TileSet/ChessTileSetBoard.tres" type="TileSet" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://ScorePiece.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/pieces/outline_rook.png" type="Texture" id=6]
[ext_resource path="res://assets/pieces/outline_knight.png" type="Texture" id=7]
[ext_resource path="res://assets/pieces/outline_bishop.png" type="Texture" id=8]
[ext_resource path="res://assets/pieces/outline_queen.png" type="Texture" id=9]
[ext_resource path="res://assets/pieces/white_king.png" type="Texture" id=10]
[ext_resource path="res://utils/Player/GameOver_detector.tscn" type="PackedScene" id=11]

[node name="World" type="Node2D"]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 1 )
PIECE_DEF_JSON = "res://logic/piece_def.gd"
piece_scene = ExtResource( 2 )

[node name="ChessBoard" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="ChessBoard"]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 1, 0, -65535, 0, 0, -65534, 1, 0, -65533, 0, 0, -65532, 1, 0, -65531, 0, 0, -65530, 1, 0, -65529, 0, 0, 65535, 1, 0, 0, 0, 0, 1, 1, 0, 2, 0, 0, 3, 1, 0, 4, 0, 0, 5, 1, 0, 6, 0, 0, 7, 1, 0, 131071, 0, 0, 65536, 1, 0, 65537, 0, 0, 65538, 1, 0, 65539, 0, 0, 65540, 1, 0, 65541, 0, 0, 65542, 1, 0, 65543, 0, 0, 196607, 1, 0, 131072, 0, 0, 131073, 1, 0, 131074, 0, 0, 131075, 1, 0, 131076, 0, 0, 131077, 1, 0, 131078, 0, 0, 131079, 1, 0, 262143, 0, 0, 196608, 1, 0, 196609, 0, 0, 196610, 1, 0, 196611, 0, 0, 196612, 1, 0, 196613, 0, 0, 196614, 1, 0, 196615, 0, 0, 327679, 1, 0, 262144, 0, 0, 262145, 1, 0, 262146, 0, 0, 262147, 1, 0, 262148, 0, 0, 262149, 1, 0, 262150, 0, 0, 262151, 1, 0, 393215, 0, 0, 327680, 1, 0, 327681, 0, 0, 327682, 1, 0, 327683, 0, 0, 327684, 1, 0, 327685, 0, 0, 327686, 1, 0, 327687, 0, 0, 458751, 1, 0, 393216, 0, 0, 393217, 1, 0, 393218, 0, 0, 393219, 1, 0, 393220, 0, 0, 393221, 1, 0, 393222, 0, 0, 393223, 1, 0, 524287, 0, 0, 458752, 1, 0, 458753, 0, 0, 458754, 1, 0, 458755, 0, 0, 458756, 1, 0, 458757, 0, 0, 458758, 1, 0, 458759, 0, 0, 589823, 1, 0, 524288, 0, 0, 524289, 1, 0, 524290, 0, 0, 524291, 1, 0, 524292, 0, 0, 524293, 1, 0, 524294, 0, 0, 524295, 1, 0, 655359, 0, 0, 589824, 1, 0, 589825, 0, 0, 589826, 1, 0, 589827, 0, 0, 589828, 1, 0, 589829, 0, 0, 589830, 1, 0, 589831, 0, 0, 720895, 1, 0, 655360, 0, 0, 655361, 1, 0, 655362, 0, 0, 655363, 1, 0, 655364, 0, 0, 655365, 1, 0, 655366, 0, 0, 655367, 1, 0, 786431, 0, 0, 720896, 1, 0, 720897, 0, 0, 720898, 1, 0, 720899, 0, 0, 720900, 1, 0, 720901, 0, 0, 720902, 1, 0, 720903, 0, 0, 786432, 0, 0, 786433, 1, 0, 786434, 0, 0, 786435, 1, 0, 786436, 0, 0, 786437, 1, 0, 786438, 0, 0, 786439, 1, 0 )

[node name="CursorMap" type="TileMap" parent="ChessBoard"]
tile_set = ExtResource( 3 )
format = 1

[node name="PreviewMap" type="TileMap" parent="ChessBoard"]
tile_set = ExtResource( 3 )
format = 1

[node name="Tween" type="Tween" parent="ChessBoard"]

[node name="Player" parent="ChessBoard" instance=ExtResource( 4 )]
color = "white"
grid_pos = Vector2( 4, 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -74.0
margin_top = 528.0
margin_right = 565.0
margin_bottom = 670.0

[node name="ScoreBoard" type="Node2D" parent="CanvasLayer"]
editor/display_folded = true
position = Vector2( 0, 528 )
scale = Vector2( 0.75, 0.75 )

[node name="Pawn0" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 0, 2 )
piece_type = "pawn"
piece_index = 0
taken = false

[node name="Pawn1" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 64, 0 )
piece_type = "pawn"
piece_index = 1
taken = false

[node name="Pawn2" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 128, 0 )
piece_type = "pawn"
piece_index = 2
taken = false

[node name="Pawn3" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 192, 0 )
piece_type = "pawn"
piece_index = 3
taken = false

[node name="Pawn4" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 256, 0 )
piece_type = "pawn"
piece_index = 4
taken = false

[node name="Pawn5" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 320, 0 )
piece_type = "pawn"
piece_index = 5
taken = false

[node name="Pawn6" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 384, 0 )
piece_type = "pawn"
piece_index = 6
taken = false

[node name="Pawn7" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 448, 0 )
piece_type = "pawn"
piece_index = 7
taken = false

[node name="Rook0" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 0, 64 )
texture = ExtResource( 6 )
piece_type = "rook"
piece_index = 0
taken = false

[node name="Knight0" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 64, 64 )
texture = ExtResource( 7 )
piece_type = "knight"
piece_index = 0
taken = false

[node name="Bishop0" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 128, 64 )
texture = ExtResource( 8 )
piece_type = "bishop"
piece_index = 0
taken = false

[node name="Queen0" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 192, 64 )
texture = ExtResource( 9 )
piece_type = "queen"
piece_index = 0
taken = false

[node name="King0" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 256, 64 )
texture = ExtResource( 10 )
piece_type = "king"
piece_index = 0
taken = true

[node name="Bishop1" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 320, 64 )
texture = ExtResource( 8 )
piece_type = "bishop"
piece_index = 1
taken = false

[node name="Knight1" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 384, 64 )
texture = ExtResource( 7 )
piece_type = "knight"
piece_index = 1
taken = false

[node name="Rook1" parent="CanvasLayer/ScoreBoard" instance=ExtResource( 5 )]
position = Vector2( 448, 64 )
texture = ExtResource( 6 )
piece_type = "rook"
piece_index = 1
taken = false

[node name="GameOver_detector" parent="." instance=ExtResource( 11 )]
position = Vector2( -3.29126, -129.201 )
scale = Vector2( 1.33333, 1.33333 )
[connection signal="capture" from="ChessBoard/Player" to="." method="_on_Player_capture"]
[connection signal="timeout" from="Timer" to="." method="_on_tick"]
